--- a/Tailwind2/src/input.css
+++ b/Tailwind2/src/input.css
@@ -127,14 +127,14 @@ body {
 }
 
 .firstt {
-  @apply flex text-[9.5px] lg:text-head justify-center items-center p-0 lg:p-2;
+  @apply flex text-[9.5px] lg:text-head justify-center gap-1 items-center p-0 lg:p-2;
 }
 
 .first2 {
   @apply bg-headerBtnText  font-semibold px-2 py-1 text-white;
 }
 
-.line1 {
+.linee {
   @apply hover:text-headerBtnText cursor-pointer transition ease-out duration-700;
 }
 
@@ -151,7 +151,7 @@ svg[data-active="true"] {
 }
 
 .arrows {
-  @apply text-white  text-[30px] cursor-pointer;
+  @apply text-white  text-[30px] cursor-pointer z-10;
 }
 
 .arriv {
